  * checks/{filenames,rules}.desc:
    + [NT] Improved the descriptions of some tags.  (Closes: #639018)
  * checks/files:
    + [NT] Added exceptions to "extra-license-file" for manpages,
      static libraries, .pc-, elf and pyshared-data-files.  This
      covers all the false-positives currently found in the liblicense
      package.  (Closes: #617901)
  * checks/shared-libs.desc:
    + [JW] Fixed a typo in a tag description.  (Closes: #639177)
  * checks/source-copyright{,.desc}:
    + [JW] Added check for DEP-5 copyright files.  (Closes: #633779)
  * checks/standards-version:
    + [NT] Made the ancient-standards-version independent of the
      system time.
  * checks/version-substvars{,.desc}:
    + [NT] Also emit the any-depends-all tag if the ">=" relation is
      used.  Thanks to Konstantinos Margaritis and Cyril Brulebois for
      the report and the research.  (Closes: #639144)

  * collection/fields{,.desc}:
    + [NT] Removed, no longer used.

  * data/fields/archive-sections:
    + [NT] Fixed a typo in "otherosfs" section name.  Thanks to
      Stefan Potyra for the report.  (Closes: #637596)
  * data/files/fonts:
    + [NT] Refreshed against sid and now includes packages starting
      with "fonts-" as well.  Thanks to Paul Wise for the patches.
      (Closes: #622149)
  * data/spelling/corrections:
    + [NT] Added some corrections for "remove" etc.  Thanks to
      Jakub Wilk for spotting those.
    + [JW] Added more corrections.  (Closes: #639367)

  * debian/copyright:
    + [NT] Added Jakub Wilk to maintainers.
  * debian/rules:
    + [JW] Use LC_ALL rather than LANG, since LC_ALL overrules
      LANG.

  * doc/lintian.xml:
    + [NT] Removed duplicate "allowed to" in same sentence.
  * doc/README.developers:
    + [NT] New file.  Thanks to Jeremiah C. Foster for the initial
      contribution.

  * frontend/lintian:
    + [NT] Lintian now mentions if overrides may have been ignored.